fix vertical overflow

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,7 +8,7 @@
 html,
 body {
 	width: 100%;
-	height: 100vh;
+	height: auto;
 }
 
 body {
@@ -17,6 +17,12 @@ body {
 		url("../assets/images/bg-pattern-bottom-desktop.svg");
 	background-position: top left, bottom right;
 	background-repeat: no-repeat no-repeat;
+	overflow-x: hidden;
+	overflow-y: hidden;
+
+	@include mixins.screen("med", mixins.$breakpoint-med) {
+		overflow-y: scroll;
+	}
 }
 
 main {
